add chatbot price suggestion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.servlet.multipart.enabled=true
 
 # Dosya yükleme dizini (proje dizini)
 app.upload.dir=uploads
+
+# OpenAI API Configuration
+openai.api.key=your-api-key-here
+openai.api.url=https://api.openai.com/v1/chat/completions
