--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.servlet.multipart.enabled=true
 app.upload.dir=uploads
 
 # OpenAI API Configuration
-openai.api.key=your-api-key-here ''
+openai.api.key=your-api-key-here
 openai.api.url=https://api.openai.com/v1/chat/completions
